Better run.sh