@@ -1,3 +1,3 @@
 #!/bin/sh
 
-java -Xms1024m -Xmx1024m -jar sbt-launch.jar container:start "~ compile"
+java -Dfile.encoding=UTF8 -Xmx3000M -Xss1M -XX:+CMSClassUnloadingEnabled -XX:MaxPermSize=1024m -jar sbt-launch.jar container:start "~ compile"
